--- a/task2-file-service/index.html
+++ b/task2-file-service/index.html
@@ -1,33 +1,88 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <title>File Upload Service</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 40px;
+            background-color: #f5f5f5;
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            min-height: 100vh;
+            margin: 0;
+            padding-top: 50px;
         }
+
         .container {
-            max-width: 500px;
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+            width: 400px;
         }
+
+        h2 {
+            text-align: center;
+            margin-bottom: 20px;
+            color: #333;
+        }
+
+        input[type="file"] {
+            display: block;
+            margin-bottom: 15px;
+            width: 100%;
+        }
+
         button {
-            margin-top: 10px;
-            padding: 8px 16px;
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            border: none;
+            border-radius: 6px;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
         }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        progress {
+            width: 100%;
+            margin-top: 15px;
+            height: 20px;
+            border-radius: 6px;
+            overflow: hidden;
+        }
+
         .result {
             margin-top: 20px;
             word-break: break-all;
+            text-align: center;
+        }
+
+        a {
+            color: #4CAF50;
+            text-decoration: none;
+        }
+
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
+
 <div class="container">
-    <h2>Upload File</h2>
+    <h2>Выбрать файл</h2>
 
     <input type="file" id="fileInput">
-    <br>
-    <button onclick="uploadFile()">Загрузить файл</button>
+    <button onclick="uploadFile()">Загрузить</button>
+
+    <progress id="progressBar" value="0" max="100" style="display:none;"></progress>
 
     <div class="result" id="result"></div>
 </div>
@@ -36,28 +91,48 @@
     async function uploadFile() {
         const input = document.getElementById("fileInput");
         const file = input.files[0];
-
         if (!file) {
             alert("Please select a file");
             return;
         }
 
-        const response = await fetch("/upload", {
-            method: "POST",
-            body: file
-        });
+        const progressBar = document.getElementById("progressBar");
+        progressBar.style.display = "block";
+        progressBar.value = 0;
 
-        const data = await response.json();  // ← ВАЖНО
+        const xhr = new XMLHttpRequest();
+        xhr.open("POST", "/upload", true);
 
-        const downloadUrl = window.location.origin + "/download/" + data.id;
+        xhr.upload.onprogress = function(e) {
+            if (e.lengthComputable) {
+                progressBar.value = (e.loaded / e.total) * 100;
+            }
+        };
 
-        document.getElementById("result").innerHTML =
-            "Download link:<br>" +
-            "<a href='" + downloadUrl + "' target='_blank'>" +
-            downloadUrl +
-            "</a>";
+        xhr.onload = function() {
+            progressBar.style.display = "none";
+            if (xhr.status === 200) {
+                const data = JSON.parse(xhr.responseText);
+                const downloadUrl = window.location.origin + "/download/" + data.id;
+
+                document.getElementById("result").innerHTML =
+                    "Download link:<br>" +
+                    "<a href='" + downloadUrl + "' target='_blank'>" +
+                    downloadUrl +
+                    "</a>";
+            } else {
+                document.getElementById("result").innerText = "Файл загружен!";
+            }
+        };
+
+        xhr.onerror = function() {
+            progressBar.style.display = "none";
+            document.getElementById("result").innerText = "Upload error!";
+        };
+
+        xhr.send(file);
     }
-
 </script>
+
 </body>
 </html>
